modification de la page d'acceuil

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <img id="bigImage" src="images/img1.jpg" title="Image" alt="Image">
             </div>
         </div>
+        <p>J'aime les biscuits</p>
     </main>
 </body>
 
